app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
*/
@import "bootstrap-sprockets";
@import "bootstrap";
@import "codemirror";

* {
  box-sizing: border-box;
}

html {
  font-family: monospace, serif, sans-serif;
}
//
// body:before {
//   content: ' ';
//   display: block;
//   position: absolute;
//   left: 0;
//   top: 0;
//   width: 100%;
//   height: 100%;
//   z-index: 1;
//   opacity: 0.6;
//   background-image: url('https://static.pexels.com/photos/249798/pexels-photo-249798.png');
//   background-repeat: no-repeat;
//   background-position: 50% 0;
//   -ms-background-size: cover;
//   -o-background-size: cover;
//   -moz-background-size: cover;
//   -webkit-background-size: cover;
//   background-size: cover;
// }
// ------ Navbar styling below ------
a.navbar-brand img {
  display: block;
  max-width:100px;
  max-height:100%;
  width: auto;
  height: auto;
}

.navbar {
  font-size: 1.75rem;
}

.navbar-nav.mr-auto {
  margin: 0 10rem;
  text-align: center;
}

.nav-item {
  margin: 0 4rem;
}

.navbar-toggler {
  width: 50px;
  height: 50px;
}

.form-inline {
  float: right;
}

.btn.btn-outline-success {
  font-size: 2rem;
  margin: 0 2rem;
  background-color: white;
  color: #1495d5;
  border-color: #1495d5;
}

.btn.btn-outline-success:hover, .btn.btn-outline-success:focus, .btn.btn-outline-success:active, .btn.btn-outline-success.active, .open>.dropdown-toggle.btn.btn-outline-success {
  color: white;
  background-color: #1495d5;
  border-color: #1495d5; /*set the color you want here*/
}


// ------ Homepage styling below ------

.front-page-container {
  display: grid;
  grid-template-columns: auto 40% 100px 40% auto;
  grid-template-rows: 800px 50px 100px 50px 400px 50px 400px 50px 400px 50px 100px auto;
  grid-column-gap: 25px;
  grid-row-gap: 25px;}

.carousel-item {
  text-align: center;
  grid-column-start: 2;
  grid-column-end: 5;
  grid-row-start: 1;
  grid-row-end: 2;
  justify-self: stretch;
  align-self: stretch;
}

#front-page-intro-head {
  text-align: center;
  grid-column-start: 2;
  grid-column-end: 5;
  grid-row-start: 3;
  grid-row-end: 4;
  justify-self: stretch;
  align-self: stretch;
}

#front-page-image-1 {
  grid-column-start: 2;
  grid-column-end: 3;
  grid-row-start: 5;
  grid-row-end: 6;
  align-self: stretch;
  justify-self: end;
  max-width: 80%;
  height: auto;
}

#front-page-feature-text-1 {
  grid-column-start: 4;
  grid-column-end: 5;
  grid-row-start: 5;
  grid-row-end: 6;
  justify-self: start;
  align-content: stretch;
  max-width: 80%;
  height: auto;
}

#front-page-image-2 {
  grid-column-start: 4;
  grid-column-end: 5;
  grid-row-start: 7;
  grid-row-end: 8;
  align-self: stretch;
  justify-self: start;
  max-width: 80%;
  height: auto;
}

#front-page-feature-text-2 {
  grid-column-start: 2;
  grid-column-end: 3;
  grid-row-start: 7;
  grid-row-end: 8;
  justify-self: end;
  align-content: stretch;
  max-width: 80%;
  height: auto;
}

#front-page-image-3 {
  grid-column-start: 2;
  grid-column-end: 3;
  grid-row-start: 9;
  grid-row-end: 10;
  align-self: stretch;
  justify-self: end;
  max-width: 80%;
  height: auto;
}

#front-page-feature-text-3 {
  grid-column-start: 4;
  grid-column-end: 5;
  grid-row-start: 9;
  grid-row-end: 10;
  justify-self: start;
  align-content: stretch;
  max-width: 80%;
  height: auto;
}

#front-page-intro-tail {
  text-align: center;
  grid-column-start: 2;
  grid-column-end: 5;
  grid-row-start: 11;
  grid-row-end: 12;
  justify-self: stretch;
  align-self: stretch;
}

.banner,
.sign-up-form,
.log-in-form, {
  text-align: center;
  position: relative;
  margin: 0 auto;
}

.carousel-inner {
  position: relative;
}

.carousel-indicators {
  position: absolute;
  right: 2rem;
}

.carousel-item {
  position: relative;
}

.carousel-caption {
  position: absolute;
  bottom: 25%;
  font-size: 4rem;
}

.carousel-item img {
  margin: 0 auto;
  display: block;
  max-width:100%;
  max-height:100%;
  width: auto;
}

.signupnow {
  color: white;
  background-color: #1495d5;
  border-color: #1495d5;
  font-size: 3rem;
  font-weight: bold;
}

// ------ Languages cards styling below -----

.languages-container {
  display: grid;
  grid-template-columns: auto 200px 200px 200px auto;
  grid-template-rows: 80px 200px 300px auto;
  grid-column-gap: 100px;
  grid-row-gap: 25px;}

.languages-page-title {
  text-align: center;
  grid-column-start: 2;
  grid-column-end: 5;
  grid-row-start: 1;
  grid-row-end: 3,
}

.card-img-top {
  height: 200px;
}

#ruby-card {
  text-align: center;
  grid-column-start: 2;
  grid-column-end: 3;
  grid-row-start: 3;
  grid-row-end: 4;
  align-self: stretch;
}

#js-card {
  text-align: center;
  grid-column-start: 3;
  grid-column-end: 4;
  grid-row-start: 3;
  grid-row-end: 4,
}

#python-card {
  text-align: center;
  grid-column-start: 4;
  grid-column-end: 5;
  grid-row-start: 3;
  grid-row-end: 4,
}

.languages-cards {
  width: 20rem;
}

.card-title {
  margin-top: 2rem;
  text-align: center;
}

.card-body {
  opacity: 0;
  position: absolute;
  width: 20rem;
  text-align: center;
  font-size: 2rem;
}

// ------ Main Menu styling below ------
.main-menu {
  text-align: center;
}

// ------ Log in form styling below ------
.log-in-form {
  font-size: 1.5rem;
}

// ------ Sign up form styling below ------
.sign-up-form {
  font-size: 1.5rem;
}
// ------ Footer styling below ------
footer {
  text-align: center;
  color: white;
  background-color: #1495d5;
  font-size: 1.5rem;
  width: 100%;
  padding: 2rem;
}

